#[[
 Copyright (C) 2020 hurricane <l@stdb.io>. All rights reserved.
 +------------------------------------------------------------------------------+
 |                                                                              |
 |                                                                              |
 |                    ..######..########.########..########.                    |
 |                    .##....##....##....##.....##.##.....##                    |
 |                    .##..........##....##.....##.##.....##                    |
 |                    ..######.....##....##.....##.########.                    |
 |                    .......##....##....##.....##.##.....##                    |
 |                    .##....##....##....##.....##.##.....##                    |
 |                    ..######.....##....########..########.                    |
 |                                                                              |
 |                                                                              |
 |                                                                              |
 +------------------------------------------------------------------------------+
]]

find_package(benchmark)

#FILE(GLOB_RECURSE BENCH_SRC *.cc)
LIST(APPEND BENCH_SRC vector_bench.cc)
add_executable(vb ${BENCH_SRC})

target_link_libraries(vb benchmark::benchmark_main)

